--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-8 text-end">
-                <h3 data-aos="fade-right">Ida Ayu Sinta Sasmita Dewi S</h3>
+                <h3 data-aos="fade-right">Ida Ayu Sinta Sasmita Dewi S, A.Md.Kes.</h3>
                 <div data-aos="fade-right">
                   <p>a.k.a <span style="font-weight: bold">Gek Sinta</span></p>
                   <p>
@@ -122,8 +122,8 @@
                     </span>
                     dan <br />
                     <span style="font-weight: bold"
-                      >Ibu. Ida Ayu Puja Astuti</span
-                    >.
+                      >Ibu. Ida Ayu Puja Astuti, S.Pt.</span
+                    >
                   </p>
                 </div>
               </div>
@@ -147,7 +147,7 @@
                 />
               </div>
               <div class="col-8">
-                <h3 data-aos="fade-left">Ida Ayu Dyah Pradnyandari Dewi S</h3>
+                <h3 data-aos="fade-left">Ida Ayu Dyah Pradnyandari Dewi S, A.Md.Kes.</h3>
                 <div data-aos="fade-left">
                   <p>a.k.a <span style="font-weight: bold">Gek Diah</span></p>
                   <p>
@@ -157,8 +157,8 @@
                     </span>
                     dan <br />
                     <span style="font-weight: bold"
-                      >Ibu. Ida Ayu Puja Astuti</span
-                    >.
+                      >Ibu. Ida Ayu Puja Astuti, S.Pt.</span
+                    >
                   </p>
                 </div>
               </div>
@@ -174,12 +174,12 @@
                   <p>
                     Anak pertama dari pasangan
                     <span style="font-weight: bold"
-                      >Bpk. Ida Bagus Nyoman Kusuma Wijaya
+                      >Bpk. Ida Bagus Nyoman Kusuma Wijaya, S.H.
                     </span>
                     dan <br />
                     <span style="font-weight: bold"
-                      >Ibu. Anak Agung Ayu Silawati</span
-                    >.
+                      >Ibu. Anak Agung Ayu Silawati, S.E.</span
+                    >
                   </p>
                 </div>
               </div>
@@ -209,12 +209,12 @@
                   <p>
                     Anak kedua dari pasangan
                     <span style="font-weight: bold"
-                      >Bpk. Ida Bagus Nyoman Kusuma Wijaya
+                      >Bpk. Ida Bagus Nyoman Kusuma Wijaya, S.H.
                     </span>
                     dan <br />
                     <span style="font-weight: bold"
-                      >Ibu. Anak Agung Ayu Silawati</span
-                    >.
+                      >Ibu. Anak Agung Ayu Silawati, S.E.</span
+                    >
                   </p>
                 </div>
               </div>
