--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Sacramento&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sacramento&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-
+    
     <!-- simplyCountdown -->
     <link rel="stylesheet" href="dist/themes/default.css" />
     <script src="dist/simplyCountdown.umd.js"></script>
@@ -112,7 +112,9 @@
           <div class="col-lg-6">
             <div class="row">
               <div class="col-8 text-end">
-                <h3 data-aos="fade-right">Ida Ayu Sinta Sasmita Dewi S, A.Md.Kes.</h3>
+                <h3 data-aos="fade-right">
+                  Ida Ayu Sinta Sasmita Dewi S, A.Md.Kes.
+                </h3>
                 <div data-aos="fade-right">
                   <p>a.k.a <span style="font-weight: bold">Gek Sinta</span></p>
                   <p>
@@ -147,7 +149,9 @@
                 />
               </div>
               <div class="col-8">
-                <h3 data-aos="fade-left">Ida Ayu Dyah Pradnyandari Dewi S, A.Md.Kes.</h3>
+                <h3 data-aos="fade-left">
+                  Ida Ayu Dyah Pradnyandari Dewi S, A.Md.Kes.
+                </h3>
                 <div data-aos="fade-left">
                   <p>a.k.a <span style="font-weight: bold">Gek Diah</span></p>
                   <p>
