--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
             <h2 data-aos="fade-up">Gallery Foto</h2>
-            <p data-aos="">
+            <p data-aos="fade-up">
               Gallery ini menampilkan foto prewedding sebelum upacara Mepandes,
               menggambarkan keindahan, kebahagiaan, dan kesiapan dalam balutan
               adat Bali.
@@ -625,7 +625,7 @@
         audio.play();
         isPlaying = true;
 
-        audioIconWrapper.style.display = "block";
+        audioIconWrapper.style.display = "flex";
       }
 
       audioIconWrapper.onclick = function () {
