ganti format foto

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               <a class="nav-link" href="#home">Home</a>
               <a class="nav-link" href="#info">Info</a>
               <a class="nav-link" href="#gallery">Gallery</a>
-              <a class="nav-link" href="#rspv">RSPV</a>
+              <a class="nav-link" href="#rsvp">RSVP</a>
             </div>
           </div>
         </div>
@@ -131,7 +131,7 @@
               </div>
               <div class="col-4" data-aos="fade-right">
                 <img
-                  src="img/profil/raka-sinta.jpg"
+                  src="img/profil/raka-sinta.webp"
                   alt="Raka Sinta"
                   class="img-responsive rounded-circle mb-5"
                 />
@@ -143,7 +143,7 @@
             <div class="row">
               <div class="col-4" data-aos="fade-left">
                 <img
-                  src="img/profil/raka-diah.jpg"
+                  src="img/profil/raka-diah.webp"
                   alt="Raka Dyah"
                   class="img-responsive rounded-circle"
                 />
@@ -189,7 +189,7 @@
               </div>
               <div class="col-4" data-aos="fade-right">
                 <img
-                  src="img/profil/gustos.jpg"
+                  src="img/profil/gustos.webp"
                   alt="Gustu"
                   class="img-responsive rounded-circle"
                 />
@@ -201,7 +201,7 @@
             <div class="row">
               <div class="col-4" data-aos="fade-left">
                 <img
-                  src="img/profil/dek-uti.jpg"
+                  src="img/profil/dek-uti.webp"
                   alt="Gek Putri"
                   class="img-responsive rounded-circle"
                 />
@@ -326,63 +326,63 @@
           data-aos="fade-up"
         >
           <div class="col mt-3">
-            <a href="img/gallery/DSC_1623.jpg" data-toggle="lightbox">
+            <a href="img/gallery/DSC_1623.webp" data-toggle="lightbox">
               <img
-                src="img/gallery/thumbnail/thumb_DSC_1623.jpg"
+                src="img/gallery/thumbnail/thumb_DSC_1623.webp"
                 alt="Perempuan only"
                 class="img-fluid w-100 rounded gallery-img"
               />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/DSC_1631.jpg" data-toggle="lightbox">
+            <a href="img/gallery/DSC_1631.webp" data-toggle="lightbox">
               <img
-                src="img/gallery/thumbnail/thumb_DSC_1631.jpg"
+                src="img/gallery/thumbnail/thumb_DSC_1631.webp"
                 alt="Perempuan only"
                 class="img-fluid w-100 rounded gallery-img"
               />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/DSC_1767.jpg" data-toggle="lightbox">
+            <a href="img/gallery/DSC_1767.webp" data-toggle="lightbox">
               <img
-                src="img/gallery/thumbnail/thumb_DSC_1767.jpg"
+                src="img/gallery/thumbnail/thumb_DSC_1767.webp"
                 alt="Perempuan only"
                 class="img-fluid w-100 rounded gallery-img"
               />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/DSC_1784.jpg" data-toggle="lightbox">
+            <a href="img/gallery/DSC_1784.webp" data-toggle="lightbox">
               <img
-                src="img/gallery/thumbnail/thumb_DSC_1784.jpg"
+                src="img/gallery/thumbnail/thumb_DSC_1784.webp"
                 alt="Perempuan only"
                 class="img-fluid w-100 rounded gallery-img"
               />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/DSC_1844.jpg" data-toggle="lightbox">
+            <a href="img/gallery/DSC_1844.webp" data-toggle="lightbox">
               <img
-                src="img/gallery/thumbnail/thumb_DSC_1844.jpg"
+                src="img/gallery/thumbnail/thumb_DSC_1844.webp"
                 alt="Perempuan only"
                 class="img-fluid w-100 rounded gallery-img"
               />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/DSC_1905.jpg" data-toggle="lightbox">
+            <a href="img/gallery/DSC_1905.webp" data-toggle="lightbox">
               <img
-                src="img/gallery/thumbnail/thumb_DSC_1905.jpg"
+                src="img/gallery/thumbnail/thumb_DSC_1905.webp"
                 alt="Perempuan only"
                 class="img-fluid w-100 rounded gallery-img"
               />
             </a>
           </div>
           <div class="col mt-3">
-            <a href="img/gallery/DSC_1935.jpg" data-toggle="lightbox">
+            <a href="img/gallery/DSC_1935.webp" data-toggle="lightbox">
               <img
-                src="img/gallery/thumbnail/thumb_DSC_1935.jpg"
+                src="img/gallery/thumbnail/thumb_DSC_1935.webp"
                 alt="Perempuan only"
                 class="img-fluid w-100 rounded gallery-img"
               />
