perbaiki caption gallery

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <div class="col-md-8 col-10 text-center">
             <h2 data-aos="fade-up">Gallery Foto</h2>
             <p data-aos="fade-up">
-              Gallery ini menampilkan foto prewedding sebelum upacara Mepandes,
+              Gallery ini menampilkan foto sebelum upacara Mepandes,
               menggambarkan keindahan, kebahagiaan, dan kesiapan dalam balutan
               adat Bali.
             </p>
