perbaiki jarak tulisan pada home, mengganti peta, fix sound

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 mt-5">
+          <div class="col-lg-6 mt-3">
             <div class="row">
               <div class="col-8 text-end">
                 <h3 data-aos="fade-right">Ida Bagus Putu Sudarma Putra S</h3>
@@ -197,7 +197,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 mt-5">
+          <div class="col-lg-6 mt-3">
             <div class="row">
               <div class="col-4" data-aos="fade-left">
                 <img
@@ -240,7 +240,7 @@
             </p>
 
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d1635.9004533908806!2d115.08062866155396!3d-8.5461131542739!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zOMKwMzInNDYuNSJTIDExNcKwMDQnNTEuMyJF!5e0!3m2!1sid!2sid!4v1743316149678!5m2!1sid!2sid"
+              src="https://www.google.com/maps/embed?pb=!3m2!1sid!2sid!4v1743571394771!5m2!1sid!2sid!6m8!1m7!1su-7svil-7Vnr4G2Mb8jjiA!2m2!1d-8.546337226070667!2d115.0808338850392!3f45.059216!4f0!5f0.7820865974627469"
               width="100%"
               height="350"
               style="border: 0"
@@ -251,7 +251,7 @@
             ></iframe>
 
             <a
-              href="https://maps.app.goo.gl/h334oK41SuNjWeoH6"
+              href="https://maps.app.goo.gl/ws5ZWcwi1bnM49pv9"
               target="_blank"
               class="btn btn-light mt-2"
               data-aos="fade-up"
@@ -292,7 +292,7 @@
                 <div class="row justify-content-center">
                   <div class="col-md-6">
                     <i class="bi bi-clock d-block"></i>
-                    <span>15.00 - Selesai</span>
+                    <span>13.00 - Selesai</span>
                   </div>
                   <div class="col-md-6">
                     <i class="bi bi-calendar3 d-block"></i>
@@ -656,6 +656,21 @@
 
         isPlaying = !isPlaying;
       };
+
+      // Deteksi jika user keluar dari halaman (beralih tab atau minimize)
+      document.addEventListener("visibilitychange", function () {
+        if (document.hidden) {
+          audio.pause();
+          audioIcon.classList.remove("bi-disc");
+          audioIcon.classList.add("bi-pause-circle");
+          isPlaying = false;
+        } else {
+          audio.play();
+          audioIcon.classList.add("bi-disc");
+          audioIcon.classList.remove("bi-pause-circle");
+          isPlaying = true;
+        }
+      });
 
       // if(!localStorage.getItem('opened')) {
       // }
