--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <main>
         <h4>Kepada Bapak/Ibu/Saudara/i,</h4>
         <h1>Griya Kediri</h1>
-        <p>Akan melangsungkan upacara Manusa Yadnya (Mepandes) dalam:</p>
+        <p class="mb-3">Akan melangsungkan upacara Manusa Yadnya (Mepandes) dalam:</p>
         <div class="simply-countdown"></div>
         <a href="#home" class="btn btn-lg mt-4" onclick="enableScroll()"
           >Lihat Undangan</a
@@ -417,6 +417,7 @@
               class="form-control"
               id="nama"
               name="nama"
+              placeholder="Masukkan nama...."
               required
             />
           </div>
