tambah foto dan edit nama

--- a/index.html
+++ b/index.html
@@ -113,10 +113,9 @@
             <div class="row">
               <div class="col-8 text-end">
                 <h3 data-aos="fade-up">
-                  Ida Ayu Sinta Sasmita Dewi S, A.Md.Kes.
+                  Ida Ayu Sinta Sasmitha Dewi S, A.Md.Kes.
                 </h3>
                 <div data-aos="fade-up">
-                  <p>a.k.a <span style="font-weight: bold">Gek Sinta</span></p>
                   <p>
                     Anak pertama dari pasangan
                     <span style="font-weight: bold"
@@ -124,7 +123,7 @@
                     </span>
                     dan <br />
                     <span style="font-weight: bold"
-                      >Ibu. Ida Ayu Puja Astuti, S.Pt.</span
+                      >Ibu. Ida Ayu Gde Puja Astuti, S.Pt.</span
                     >
                   </p>
                 </div>
@@ -153,7 +152,6 @@
                   Ida Ayu Dyah Pradnyandari Dewi S, A.Md.Kes.
                 </h3>
                 <div data-aos="fade-up">
-                  <p>a.k.a <span style="font-weight: bold">Gek Dyah</span></p>
                   <p>
                     Anak kedua dari pasangan
                     <span style="font-weight: bold"
@@ -161,7 +159,7 @@
                     </span>
                     dan <br />
                     <span style="font-weight: bold"
-                      >Ibu. Ida Ayu Puja Astuti, S.Pt.</span
+                      >Ibu. Ida Ayu Gde Puja Astuti, S.Pt.</span
                     >
                   </p>
                 </div>
@@ -174,7 +172,6 @@
               <div class="col-8 text-end">
                 <h3 data-aos="fade-up">Ida Bagus Putu Sudarma Putra S</h3>
                 <div data-aos="fade-up">
-                  <p>a.k.a <span style="font-weight: bold">Gustu</span></p>
                   <p>
                     Anak pertama dari pasangan
                     <span style="font-weight: bold"
@@ -209,7 +206,6 @@
               <div class="col-8">
                 <h3 data-aos="fade-up">Ida Ayu Putri Maharani Dewi S</h3>
                 <div data-aos="fade-up">
-                  <p>a.k.a <span style="font-weight: bold">Gek Putri</span></p>
                   <p>
                     Anak kedua dari pasangan
                     <span style="font-weight: bold"
@@ -300,7 +296,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card-footer">Resepsi After Mepandes</div>
+              <div class="card-footer">Resepsi Mepandes</div>
             </div>
           </div>
         </div>
@@ -383,6 +379,42 @@
             <a href="img/gallery/DSC_1935.webp" data-toggle="lightbox">
               <img
                 src="img/gallery/thumbnail/thumb_DSC_1935.webp"
+                alt="Perempuan only"
+                class="img-fluid w-100 rounded gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="img/gallery/DSC_1695.webp" data-toggle="lightbox">
+              <img
+                src="img/gallery/thumbnail/thumb_DSC_1695.webp"
+                alt="Perempuan only"
+                class="img-fluid w-100 rounded gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="img/gallery/DSC_1742.webp" data-toggle="lightbox">
+              <img
+                src="img/gallery/thumbnail/thumb_DSC_1742.webp"
+                alt="Perempuan only"
+                class="img-fluid w-100 rounded gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="img/gallery/DSC_1807.webp" data-toggle="lightbox">
+              <img
+                src="img/gallery/thumbnail/thumb_DSC_1807.webp"
+                alt="Perempuan only"
+                class="img-fluid w-100 rounded gallery-img"
+              />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="img/gallery/DSC_1928.webp" data-toggle="lightbox">
+              <img
+                src="img/gallery/thumbnail/thumb_DSC_1928.webp"
                 alt="Perempuan only"
                 class="img-fluid w-100 rounded gallery-img"
               />
