edit nama profile

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 </h3>
                 <div data-aos="fade-up">
                   <p>
-                    Anak pertama dari pasangan
+                    Putri pertama dari pasangan
                     <span style="font-weight: bold"
                       >Bpk. Ida Bagus Ngurah Yuliarta
                     </span>
@@ -153,7 +153,7 @@
                 </h3>
                 <div data-aos="fade-up">
                   <p>
-                    Anak kedua dari pasangan
+                    Putri kedua dari pasangan
                     <span style="font-weight: bold"
                       >Bpk. Ida Bagus Ngurah Yuliarta
                     </span>
@@ -173,7 +173,7 @@
                 <h3 data-aos="fade-up">Ida Bagus Putu Sudarma Putra S</h3>
                 <div data-aos="fade-up">
                   <p>
-                    Anak pertama dari pasangan
+                    Putra pertama dari pasangan
                     <span style="font-weight: bold"
                       >Bpk. Ida Bagus Nyoman Kusuma Wijaya, S.H.
                     </span>
@@ -207,7 +207,7 @@
                 <h3 data-aos="fade-up">Ida Ayu Putri Maharani Dewi S</h3>
                 <div data-aos="fade-up">
                   <p>
-                    Anak kedua dari pasangan
+                    Putri kedua dari pasangan
                     <span style="font-weight: bold"
                       >Bpk. Ida Bagus Nyoman Kusuma Wijaya, S.H.
                     </span>
